--- a/AlbumPhotoSerivce/AlbumPhotoFetchService.csproj
+++ b/AlbumPhotoSerivce/AlbumPhotoFetchService.csproj
@@ -1,13 +1,14 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.1</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\AlbumPhotoService.Contracts\AlbumPhotoService.Contracts.csproj" />
+    <ProjectReference Include="..\AlbumPhotoFetchService.Contracts\AlbumPhotoFetchService.Contracts.csproj" />
     <ProjectReference Include="..\CacheEvictionPolicy\CacheEvictionPolicy.csproj" />
     <ProjectReference Include="..\Caching.Contracts\Caching.Contracts.csproj" />
+    <ProjectReference Include="..\Repository\Repository.Contracts.csproj" />
   </ItemGroup>
 
 </Project>
