--- a/AlbumPhotoTest.Tests/AlbumPhotoTest.Tests.csproj
+++ b/AlbumPhotoTest.Tests/AlbumPhotoTest.Tests.csproj
@@ -14,6 +14,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\AlbumPhotoFetchService.Contracts\AlbumPhotoFetchService.Contracts.csproj" />
+    <ProjectReference Include="..\AlbumPhotoTest\AlbumPhotoTest.csproj" />
   </ItemGroup>
 
 </Project>
