--- a/Caching.Contracts/Caching.Contracts.csproj
+++ b/Caching.Contracts/Caching.Contracts.csproj
@@ -1,12 +1,7 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.1</TargetFramework>
   </PropertyGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\AlbumPhotoService.Contracts\AlbumPhotoService.Contracts.csproj" />
-    <ProjectReference Include="..\Repository\Repository.Contracts.csproj" />
-  </ItemGroup>
 
 </Project>
